manually gather test data file that Git::GatherDir skips

--- a/dist.ini
+++ b/dist.ini
@@ -8,3 +8,9 @@ copyright_year   = 2011
 :version = 0.030
 stopwords = MYMETA
 stopwords = mymeta
+
+; our Git::GatherDir skip rules exclude t/data/metaonly/META.json
+; so we have to manually gather it
+[GatherDir / GatherTestMeta]
+root = t/data/metaonly
+prefix = t/data/metaonly
