update meta files

--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,9 @@ copyright_holder = David Golden
 copyright_year   = 2011
 
 [@DAGOLDEN]
-:version = 0.030
+:version = 0.043
+AutoMetaResources.bugtracker.rt = 0
+AutoMetaResources.bugtracker.github = user:dagolden
 stopwords = MYMETA
 stopwords = mymeta
 
